--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.3",
+    "mongoose": "^8.7.1",
     "mongoose-sequence": "^6.0.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
