--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
@@ -33,7 +34,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "sweetalert2": "^11.14.2",
     "web-vitals": "^2.1.4"
   },
