--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-lottie": "^1.2.4",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
