--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@mui/material": "^6.1.2",
     "@mui/styles": "^6.1.2",
     "@react-google-maps/api": "^2.20.3",
@@ -24,6 +25,7 @@
     "jspdf-autotable": "^3.8.3",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "lottie-react": "^2.4.0",
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
