--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.14.2",
     "web-vitals": "^2.1.4"
