--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.5",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
@@ -29,6 +30,7 @@
     "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
